2011-07-16  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* config/local/configure.cfg,
	* config/stable/configure.cfg: Upgrade to isl-0.07.

	* bin/pocc-util.in: Fix a bug in the 'upgrade' command.

2011-07-13  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* bin/pocc-make: Fix module dependence computation.

2011-07-13  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/driver-clastops.c,
	* driver/pocc/driver-pastops.c: Insert pragma from PAST trees only
	if option --pragmatizer is on.

	* tests/scripts/checker_correctness.sh: Automatically copy failed
	tests into specific directory, use --pragmatizer by default.

2011-07-13  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* config/devel/configure.cfg,
	* config/base/configure.cfg: Update to the latest version of CLooG.

2011-07-13  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* config/devel/configure.cfg,
	* config/base/configure.cfg: Fix a typo.

	* config/local/configure.cfg,
	* config/stable/configure.cfg: Upgrade to candl-0.6.0.

2011-07-13  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
	This patch moves every occurence of piplib use to piplib-hybrid, a
	new piplib version that automatically adapts to MP integer in case
	of overflow with long long int.

	* driver/pocc/Makefile.am,
	* driver/src/Makefile.am,
	* config/devel/configure.cfg,
	* config/devel/driver.cfg,
	* config/base/configure.cfg,
	* config/base/driver.cfg,
	* config/local/configure.cfg,
	* config/local/driver.cfg,
	* config/sable/configure.cfg,
	* config/sable/driver.cfg: Use piplib-hybrid in place of piplib.

2011-07-12  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/driver-pastops.c: Fix a bug in the handling of
	statements surrounded by no loop.

2011-07-12  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* config/stable/configure.cfg,
	* config/local/configure.cfg: Update to candl-0.5.1.

2011-07-12  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
