@@ -40,11 +40,15 @@ pocc_driver_candl (scoplib_scop_p program,
       CandlOptions* coptions = candl_options_malloc ();
       CandlProgram* cprogram = candl_program_convert_scop (program, NULL);
       CandlDependence* deps = candl_dependence (cprogram, coptions);
-      if (poptions->verbose)
-	candl_dependence_pprint (stdout, deps);
+      if (poptions->candl_deps_prune_transcover)
+	deps = candl_dependence_prune_transitively_covered (deps);
       // Simplify dependences with ISL, if needed.
       if (poptions->candl_deps_isl_simplify)
 	  candl_dependence_isl_simplify(deps, cprogram);
+
+      if (poptions->verbose)
+	candl_dependence_pprint (stdout, deps);
+
       // Embed dependences in the scop, in case we want pluto to read them.
       if (poptions->pluto_external_candl)
 	candl_dependence_update_scop_with_deps (program, deps);
