@@ -42,7 +42,8 @@ static const struct s_opt       opts[POCC_NB_OPTS] =
   { '\0', "inscop-fakearray", 0, "Parser: use FAKEARRAY[i] to explicitly declare\n\t\t\t\twrite dependences" },
   { '\0', "read-scop", 0, "\tParser: read SCoP file instead of C file\n\t\t\t\tas input\n" },
   { '\0', "no-candl", 0, "\tDependence analysis: don't run candl [off]" },
-  { '\0', "candl-dep-isl-simp", 0, "Dependence analysis: simplify with ISL [off]\n" },
+  { '\0', "candl-dep-isl-simp", 0, "Dependence analysis: simplify with ISL [off]" },
+  { '\0', "candl-dep-prune", 0, "Dependence analysis: prune redundant deps [off]\n" },
   { '\0', "polyfeat", 0, "\tRun Polyhedral Feature Extraction [off]" },
   { '\0', "polyfeat-rar", 0, "\tConsider RAR dependences in PolyFeat [off]\n" },
   { 'd', "delete-files", 0, "\tDelete files previously generated by PoCC [off]\n" },
@@ -83,7 +84,7 @@ static const struct s_opt       opts[POCC_NB_OPTS] =
   { '\0', "cloog-cloogf", 1, "CLooG: first level to scan [1]" },
   { '\0', "cloog-cloogl", 1, "CLooG: last level to scan [-1]" },
   { '\0', "use-past", 0, "\tUse the PAST back-end [off]" },
-  { '\0', "pragmatizer", 0, "\tUse the CLAST pragmatizer [off]" },
+  { '\0', "pragmatizer", 0, "\tUse the AST pragmatizer [off]" },
   { '\0', "ptile", 0, "\tUse PTile for parametric tiling (experimental) [off]" },
   { '\0', "vectorizer", 0, "\tPost-transform for vectorization [off]" },
   { '\0', "mark-par-loops", 0, "Detect parallel loops in generated\n\t\t\t\tcode [off]" },
@@ -112,10 +113,11 @@ static const struct s_opt       opts[POCC_NB_OPTS] =
   { '\0', "cloogify-scheds", 0, "Create CLooG-compatible schedules in the scop" },
   { '\0', "bounded-ctxt", 0, "\tParser: bound all global parameters >= -1" },
   { '\0', "default-ctxt", 0, "\tParser: bound all global parameters >= 32" },
-  { '\0', "inscop-fakearray", 0, "Parser: use FAKEARRAY[i] to explicitly declare\n\t\t\t\twrite dependences" },
+  { '\0', "inscop-fakearray", 0, "(E) Parser: use FAKEARRAY[i] to explicitly declare\n\t\t\t\twrite dependences" },
   { '\0', "read-scop", 0, "\tParser: read SCoP file instead of C file\n\t\t\t\tas input\n" },
   { '\0', "no-candl", 0, "\tDependence analysis: don't run candl [off]" },
-  { '\0', "candl-dep-isl-simp", 0, "Dependence analysis: simplify with ISL [off]\n" },
+  { '\0', "candl-dep-isl-simp", 0, "Dependence analysis: simplify with ISL [off]" },
+  { '\0', "candl-dep-prune", 0, "(E) Dependence analysis: prune redundant deps [off]\n" },
   { '\0', "polyfeat", 0, "\tRun Polyhedral Feature Extraction [off]\n" },
   { '\0', "polyfeat-rar", 0, "\tConsider RAR dependences in PolyFeat [off]\n" },
   { 'd', "delete-files", 0, "\tDelete files previously generated by PoCC [off]\n" },
@@ -134,18 +136,18 @@ static const struct s_opt       opts[POCC_NB_OPTS] =
   { 'p', "pluto", 0, "\tOptimize with PLuTo [off]" },
   { '\0', "pluto-parallel", 0, "PLuTo: OpenMP parallelization [off]" },
   { '\0', "pluto-tile", 0, "\tPLuTo: polyhedral tiling [off]" },
-  { '\0', "pluto-l2tile", 0, "\tPLuTo: perform L2 tiling [off]" },
+  { '\0', "pluto-l2tile", 0, "\t(E) PLuTo: perform L2 tiling [off]" },
   { '\0', "pluto-fuse", 1, "PLuTo: fusion heuristic:\n\t\t\t\tmaxfuse, [smartfuse], nofuse" },
   { '\0', "pluto-unroll", 0, "\tPLuTo: unroll loops [off]" },
   { '\0', "pluto-ufactor", 1, "PLuTo: unrolling factor [4]" },
-  { '\0', "pluto-polyunroll", 0, "PLuTo: polyhedral unrolling [off]" },
+  { '\0', "pluto-polyunroll", 0, "(E) PLuTo: polyhedral unrolling [off]" },
   { '\0', "pluto-prevector", 0, "PLuTo: perform prevectorization [off]" },
-  { '\0', "pluto-multipipe", 0, "PLuTo: multipipe [off]" },
+  { '\0', "pluto-multipipe", 0, "(E) PLuTo: multipipe [off]" },
   { '\0', "pluto-rar", 0, "\tPLuTo: consider RAR dependences [off]" },
   { '\0', "pluto-rar-cf", 0, "\tPLuTo: consider RAR dependences for \n\t\t\t\tcost function only [off]" },
   { '\0', "pluto-lastwriter", 0, "PLuTo: perform lastwriter dep. simp. [off]" },
   { '\0', "pluto-scalpriv", 0, "PLuTo: perform scalar privatization [off]" },
-  { '\0', "pluto-bee", 0, "\tPLuTo: use Bee [off]" },
+  { '\0', "pluto-bee", 0, "\t(E) PLuTo: use Bee [off]" },
   { '\0', "pluto-quiet", 0, "\tPLuTo: be quiet [off]" },
   { '\0', "pluto-ft", 0, "\tPLuTo: ft [off]" },
   { '\0', "pluto-lt", 0, "\tPLuTo: lt [off]" },
@@ -156,7 +158,7 @@ static const struct s_opt       opts[POCC_NB_OPTS] =
   { '\0', "cloog-cloogf", 1, "CLooG: first level to scan [1]" },
   { '\0', "cloog-cloogl", 1, "CLooG: last level to scan [-1]" },
   { '\0', "use-past", 0, "\tUse the PAST back-end [off]" },
-  { '\0', "pragmatizer", 0, "\tUse the CLAST pragmatizer [off]" },
+  { '\0', "pragmatizer", 0, "\tUse the AST pragmatizer [off]" },
   { '\0', "ptile", 0, "\tUse PTile for parametric tiling (experimental) [off]" },
   { '\0', "codegen-timercode", 0, "Codegen: insert timer code [off]" },
   { '\0', "codegen-timer-asm", 0, "Codegen: insert ASM timer code [off]" },
@@ -333,6 +335,8 @@ pocc_getopts (s_pocc_options_t* options, int argc, char** argv)
     options->candl_pass = 0;
   if (opt_tab[POCC_OPT_CANDL_DEP_ISL_SIMP])
     options->candl_deps_isl_simplify = 1;
+  if (opt_tab[POCC_OPT_CANDL_DEP_PRUNE_DUPS])
+    options->candl_deps_prune_transcover = 1;
 
   // Feature extraction.
   if (opt_tab[POCC_OPT_POLYFEAT])
