@@ -35,9 +35,9 @@
 # include "getopts.h"
 
 # ifndef POCC_RELEASE_MODE
-#  define POCC_NB_OPTS				67
+#  define POCC_NB_OPTS				68
 # else
-#  define POCC_NB_OPTS				60
+#  define POCC_NB_OPTS				61
 # endif
 
 # define POCC_OPT_HELP				0
@@ -52,79 +52,80 @@
 
 # define POCC_OPT_NO_CANDL			9
 # define POCC_OPT_CANDL_DEP_ISL_SIMP		10
+# define POCC_OPT_CANDL_DEP_PRUNE_DUPS		11
 
-# define POCC_OPT_POLYFEAT			11
-# define POCC_OPT_POLYFEAT_RAR			12
+# define POCC_OPT_POLYFEAT			12
+# define POCC_OPT_POLYFEAT_RAR			13
 
-# define POCC_OPT_TRASH				13
-# define POCC_OPT_VERBOSE			14
-# define POCC_OPT_QUIET				15
+# define POCC_OPT_TRASH				14
+# define POCC_OPT_VERBOSE			15
+# define POCC_OPT_QUIET				16
 
-# define POCC_OPT_LETSEE			16
-# define POCC_OPT_LETSEE_SEARCHSPACE		17
-# define POCC_OPT_LETSEE_TRAVERSAL		18
-# define POCC_OPT_LETSEE_DRY_RUN          	19
-# define POCC_OPT_LETSEE_NORMSPACE		20
-# define POCC_OPT_LETSEE_BOUNDS			21
-# define POCC_OPT_LETSEE_SCHEME_M1		22
-# define POCC_OPT_LETSEE_RTRIES			23
-# define POCC_OPT_LETSEE_PRUNE_PRECUT		24
-# define POCC_OPT_LETSEE_BACKTRACK_MULTI	25
+# define POCC_OPT_LETSEE			17
+# define POCC_OPT_LETSEE_SEARCHSPACE		18
+# define POCC_OPT_LETSEE_TRAVERSAL		19
+# define POCC_OPT_LETSEE_DRY_RUN          	20
+# define POCC_OPT_LETSEE_NORMSPACE		21
+# define POCC_OPT_LETSEE_BOUNDS			22
+# define POCC_OPT_LETSEE_SCHEME_M1		23
+# define POCC_OPT_LETSEE_RTRIES			24
+# define POCC_OPT_LETSEE_PRUNE_PRECUT		25
+# define POCC_OPT_LETSEE_BACKTRACK_MULTI	26
 
-# define POCC_OPT_PLUTO				26
-# define POCC_OPT_PLUTO_PARALLEL		27
-# define POCC_OPT_PLUTO_TILE			28
-# define POCC_OPT_PLUTO_L2TILE			29
-# define POCC_OPT_PLUTO_FUSE			30
-# define POCC_OPT_PLUTO_UNROLL			31
-# define POCC_OPT_PLUTO_UFACTOR			32
-# define POCC_OPT_PLUTO_POLYUNROLL		33
-# define POCC_OPT_PLUTO_PREVECTOR		34
-# define POCC_OPT_PLUTO_MULTIPIPE		35
-# define POCC_OPT_PLUTO_RAR			36
-# define POCC_OPT_PLUTO_RAR_CF			37
-# define POCC_OPT_PLUTO_LASTWRITER		38
-# define POCC_OPT_PLUTO_SCALPRIV		39
-# define POCC_OPT_PLUTO_BEE			40
-# define POCC_OPT_PLUTO_QUIET			41
-# define POCC_OPT_PLUTO_FT			42
-# define POCC_OPT_PLUTO_LT			43
-# define POCC_OPT_PLUTO_EXTERNAL_CANDL	       	44
-# define POCC_OPT_PLUTO_TILING_IN_SCATT	       	45
-# define POCC_OPT_PLUTO_BOUND_COEF	       	46
+# define POCC_OPT_PLUTO				27
+# define POCC_OPT_PLUTO_PARALLEL		28
+# define POCC_OPT_PLUTO_TILE			29
+# define POCC_OPT_PLUTO_L2TILE			30
+# define POCC_OPT_PLUTO_FUSE			31
+# define POCC_OPT_PLUTO_UNROLL			32
+# define POCC_OPT_PLUTO_UFACTOR			33
+# define POCC_OPT_PLUTO_POLYUNROLL		34
+# define POCC_OPT_PLUTO_PREVECTOR		35
+# define POCC_OPT_PLUTO_MULTIPIPE		36
+# define POCC_OPT_PLUTO_RAR			37
+# define POCC_OPT_PLUTO_RAR_CF			38
+# define POCC_OPT_PLUTO_LASTWRITER		39
+# define POCC_OPT_PLUTO_SCALPRIV		40
+# define POCC_OPT_PLUTO_BEE			41
+# define POCC_OPT_PLUTO_QUIET			42
+# define POCC_OPT_PLUTO_FT			43
+# define POCC_OPT_PLUTO_LT			44
+# define POCC_OPT_PLUTO_EXTERNAL_CANDL	       	45
+# define POCC_OPT_PLUTO_TILING_IN_SCATT	       	46
+# define POCC_OPT_PLUTO_BOUND_COEF	       	47
 
-# define POCC_OPT_NOCODEGEN			47
-# define POCC_OPT_CLOOG_F			48
-# define POCC_OPT_CLOOG_L			49
-# define POCC_OPT_USE_PAST			50
-# define POCC_OPT_PRAGMATIZER			51
+# define POCC_OPT_NOCODEGEN			48
+# define POCC_OPT_CLOOG_F			49
+# define POCC_OPT_CLOOG_L			50
+# define POCC_OPT_USE_PAST			51
+# define POCC_OPT_PRAGMATIZER			52
 
-# define POCC_OPT_PTILE				52
+# define POCC_OPT_PTILE				53
 
-# define POCC_OPT_VECTORIZER			53
-# define POCC_OPT_VECT_MARK_PAR_LOOPS    	54
-# define POCC_OPT_VECT_NO_KEEP_OUTER_PAR_LOOPS  55
-# define POCC_OPT_VECT_SINK_ALL_LOOPS		56
-# define POCC_OPT_STORCOMPACT			57
-# define POCC_OPT_AC_KEEP_OUTERPAR		58
-# define POCC_OPT_AC_KEEP_VECTORIZED		59
+# define POCC_OPT_VECTORIZER			54
+# define POCC_OPT_VECT_MARK_PAR_LOOPS    	55
+# define POCC_OPT_VECT_NO_KEEP_OUTER_PAR_LOOPS  56
+# define POCC_OPT_VECT_SINK_ALL_LOOPS		57
+# define POCC_OPT_STORCOMPACT			58
+# define POCC_OPT_AC_KEEP_OUTERPAR		59
+# define POCC_OPT_AC_KEEP_VECTORIZED		60
 
 # ifndef POCC_RELEASE_MODE
-#  define POCC_OPT_CODEGEN_TIMERCODE		60
-#  define POCC_OPT_CODEGEN_TIMER_ASM		61
-#  define POCC_OPT_CODEGEN_TIMER_PAPI		62
-#  define POCC_OPT_COMPILE      		63
-#  define POCC_OPT_COMPILE_CMD          	64
-#  define POCC_OPT_RUN_CMD_ARGS          	65
-#  define POCC_OPT_PROGRAM_TIMEOUT        	66
+#  define POCC_OPT_CODEGEN_TIMERCODE		61
+#  define POCC_OPT_CODEGEN_TIMER_ASM		62
+#  define POCC_OPT_CODEGEN_TIMER_PAPI		63
+#  define POCC_OPT_COMPILE      		64
+#  define POCC_OPT_COMPILE_CMD          	65
+#  define POCC_OPT_RUN_CMD_ARGS          	66
+#  define POCC_OPT_PROGRAM_TIMEOUT        	67
 # else
-#  define POCC_OPT_CODEGEN_TIMERCODE		53
-#  define POCC_OPT_CODEGEN_TIMER_ASM		54
-#  define POCC_OPT_CODEGEN_TIMER_PAPI		55
-#  define POCC_OPT_COMPILE      		56
-#  define POCC_OPT_COMPILE_CMD          	57
-#  define POCC_OPT_RUN_CMD_ARGS          	58
-#  define POCC_OPT_PROGRAM_TIMEOUT        	59
+#  define POCC_OPT_CODEGEN_TIMERCODE		54
+#  define POCC_OPT_CODEGEN_TIMER_ASM		55
+#  define POCC_OPT_CODEGEN_TIMER_PAPI		56
+#  define POCC_OPT_COMPILE      		57
+#  define POCC_OPT_COMPILE_CMD          	58
+#  define POCC_OPT_RUN_CMD_ARGS          	59
+#  define POCC_OPT_PROGRAM_TIMEOUT        	60
 # endif
 
 BEGIN_C_DECLS
